<resources>
    <string name="app_name">pinned</string>
    <string name="user_login">USER LOGIN</string>
    <string name="enter_your_userid">Enter your UserID</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="login">LOGIN</string>
    <string name="enter_your_userid">Enter your UserID</string>
    <string name="enter_password">Enter Password</string>
    <string name="todo">TODO</string>
    <string name="_">Login</string>
    <string name="sign_up">SIGN UP</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="user_sign_up">USER SIGN UP</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="email_address">Email Address</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>